docs(register): add documentation for register endpoint and fix general exception status code
